--- a/TDM-Client/package.json
+++ b/TDM-Client/package.json
@@ -14,9 +14,11 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-router-dom": "^6.15.0",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.22.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
